--- a/main.css
+++ b/main.css
@@ -1,4 +1,11 @@
-h1 {
+.logo {
+    background-image: url(" https://appacademy.github.io/styleguide/assets/logo/logo-emblem-black-1000.png");
+    height: 100px;
+    width: 100px;
+    background-size: cover;
+}
+
+/* h1 {
     font-size: ;
     font-family: ;
     padding: ;
@@ -27,11 +34,4 @@ p {
     color: ;
     background-color: ;
 }
-
-.logo {
-    background-size: cover;
-    background-image: url();
-    background-color: ;
-    height: ;
-    width: ;
-}
+ */
